# pomegranate

./: .clang-format  CMakeLists.txt  README.md  test.c  test.pom  test.s
examples/: hello.pom  hello.psm  return.pom  test.psm
pasm/: Makefile
pasm/src/: encode.c  encode.h  main.c  parse.c  parse.h  spec.c  spec.h  tree.c  tree.h  util.h
src/: ast.h  main.c  print.h  tok.c  tok.h
src/asm/: asm.c  asm.h  check.c  check.h  codes.c  constexpr.c  constexpr.h  match.h  platform.h  set.c  set.h  spec.c  spec.h
src/asm/platform/: x86_64.h
src/asm/platform/x86_64/: constexpr.c  constexpr.h  encode.c  instruction.h  match.c  mnems.c  mnems.h  parse.c  parse.h
src/asm/x86_64/: check.c  check.h  codes.c  spec.c  spec.h
